// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Baba /> should pass dom data to child animation 1`] = `
Array [
  Object {
    "fromTarget": Object {
      "containerElement": <div
        style="opacity: 1;"
      />,
      "location": Object {
        "left": 0,
        "top": 0,
      },
      "raw": Object {
        "rect": Object {},
        "scrollLeft": 0,
        "scrollTop": 0,
      },
      "render": [Function],
      "size": Object {
        "height": 200,
        "width": 100,
      },
      "targetDOMData": undefined,
      "targetElement": undefined,
    },
    "toTarget": Object {
      "containerElement": undefined,
      "location": Object {
        "left": 0,
        "top": 0,
      },
      "raw": Object {
        "rect": Object {},
        "scrollLeft": 0,
        "scrollTop": 0,
      },
      "render": undefined,
      "size": Object {
        "height": 200,
        "width": 100,
      },
      "targetDOMData": undefined,
      "targetElement": undefined,
    },
  },
]
`;

exports[`<Baba /> should pass dom data to child animation when using in prop 1`] = `
Array [
  Object {
    "fromTarget": Object {
      "containerElement": <div
        style="opacity: 1;"
      />,
      "location": Object {
        "left": 0,
        "top": 0,
      },
      "raw": Object {
        "rect": Object {},
        "scrollLeft": 0,
        "scrollTop": 0,
      },
      "render": [Function],
      "size": Object {
        "height": 200,
        "width": 100,
      },
      "targetDOMData": undefined,
      "targetElement": undefined,
    },
    "toTarget": Object {
      "containerElement": undefined,
      "location": Object {
        "left": 0,
        "top": 0,
      },
      "raw": Object {
        "rect": Object {},
        "scrollLeft": 0,
        "scrollTop": 0,
      },
      "render": undefined,
      "size": Object {
        "height": 200,
        "width": 100,
      },
      "targetDOMData": undefined,
      "targetElement": undefined,
    },
  },
]
`;

exports[`<Baba /> should pass target dom data to child animation 1`] = `
Object {
  "location": Object {
    "left": 0,
    "top": 0,
  },
  "raw": Object {
    "rect": Object {},
    "scrollLeft": 0,
    "scrollTop": 0,
  },
  "size": Object {
    "height": 200,
    "width": 100,
  },
}
`;
